﻿A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Since build 224:
----------------
* PythonWin is now able to start with non-English active keyboard layout.

Since build 223:
----------------
* Built with a released version of Python 3.7, which fixes various date related
  issues with Python 3.7

* Fix a regression introduced in build 220 around how some COM properties are
  handled (#1211 and #1199)

* Everything is now build with the Windows 8.1 SDK. While this should typically
  be invisible, it is mentioned because it might explain obscure issues that
  creep in, so it should be explicitly called out as a change.
  On the plus side, this makes building the extensions far simpler.

* win32serviceutil - in GetServiceClassString, skip rewrite of file name (fname)
  when win32api.FindFiles returns an empty list, e.g., if the service has been
  packaged in a zip or exe. (fixes issue #642)

Since build 222:
----------------
* pywin32.pth now arranges for the pywin32_system32 directory to be on
  PATH to help with pypi installations (thanks to @xovian via #1153)

Since build 221:
----------------
* !! Moved to github for development !!. https://github.com/mhammond/pywin32
  is the new home of pywin32 and all builds will be released there.
  The build process now also builds "wheels", so "pip install pywin32" should
  also work (but see README.md for some limitiations of using pip)

  Particular thanks to @xoviat, who helped with prompting me to make the
  change, imported all the issues from sourceforge, and helped with the
  process for creating the wheels.

  As a part of this, I've changed every issue in this file from "#xxx" to
  "#sfxxx" to indicate they refer to the old sourceforge issue numbers.

* Older Python versions are no longer supported - builds are only made